@startuml

title __ROOM's Class Diagram__\n

  package ru.david.room {
    class CoordinatesOutOfRoomException {
        + getMessage()
    }
  }
  

  package ru.david.room {
    class Creature {
        - name : String
        ~ Creature()
        ~ Creature()
        ~ Creature()
        ~ Creature()
        + getName()
        + setName()
        + toString()
        + getCoolness()
        + compareTo()
        + equals()
        + hashCode()
    }
  }
  

  package ru.david.room {
    class CreatureFactory {
        {static} ~ makeCreatureFromJSON()
    }
  }
  

  package ru.david.room {
    class Hoosegow {
        - collection : PriorityQueue<Creature>
        - createdDate : Date
        - edited : boolean
        + add()
        + remove()
        + removeGreaterThan()
        + removeLast()
        + getCollection()
        + getSize()
        + setCreatedDate()
        + getCreatedDate()
        + isEdited()
        + setEdited()
        ~ getCollectionInfo()
    }
  }
  

  package ru.david.room {
    class HoosegowStateController {
        {static} ~ loadState()
        {static} + hasChildElements()
        {static} ~ saveState()
    }
  }
  

  package ru.david.room {
    class Main {
        {static} - AUTOSAVE_FILENAME : String
        {static} - multiline : boolean
        {static} + main()
        {static} - processQuery()
        {static} - enableAutosave()
        {static} - getMultilineCommand()
        {static} - getFileContent()
        {static} - extractCommand()
    }
  }
  

  package ru.david.room {
    class Command {
        ~ name : String
        ~ argument : String
        ~ Command()
    }
  }
  

  package ru.david.room {
    class PhysicalObject {
        - x : int
        - y : int
        - width : int
        - height : int
        ~ PhysicalObject()
        ~ PhysicalObject()
        + setBounds()
        + setPosition()
        + setSize()
        + getX()
        + getY()
        + setX()
        + setY()
        + getWidth()
        + getHeight()
        + setWidth()
        + setHeight()
    }
  }
  

  Creature -up-|> Comparable
  Creature -up-|> PhysicalObject
  Main +-down- Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
